--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
     pointer-events: none;
 }
 
-.upload-area:hover, .showmenu:hover .search_location:hover, .search_location:hover{
+.upload-area:hover, .showmenu:hover, .search_location:hover, .search_location:hover{
     cursor: pointer;
     background-color: gray;
     color: white;
